--- a/STARTER-FILES/index.html
+++ b/STARTER-FILES/index.html
@@ -11,6 +11,15 @@
 
 <body>
 
+  <template id="episode">
+    <li class="episode-item">
+      <label class="episode-label" for="episode-1">
+        <input class="episode-input" type="checkbox" name="episode-1" id="episode-1" />
+        <span class="episode-span">1 || Trailer</span>
+      </label>
+    </li>
+  </template>
+
   <div class="wrapper">
     <div class="cover">
       <img src="./images/podcast-cover.png" alt="Compressed.fm" />
